--- a/templates/assets/libs/iconfont/iconfont.css
+++ b/templates/assets/libs/iconfont/iconfont.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "roozenfont"; /* Project id 4209751 https://roozen.top/upload/aurora-icon/demo_index.html <i class="roozenfont roozen-angle-double-left">::before</i>*/
+  font-family: "roozenfont"; /* 查看目录下的roozen.pdf Project id 4209751 https://roozen.top/upload/aurora-icon/demo_index.html <i class="roozenfont roozen-angle-double-left">::before</i>*/
   /* Color fonts */
   src: 
        url('iconfont.woff2?t=1692002143154') format('woff2'),
