--- a/templates/macro/post-card.html
+++ b/templates/macro/post-card.html
@@ -20,6 +20,15 @@
             display: none;
             background: transparent; /* 修改为 transparent，防止默认白色背景 */
         }
+        #article-title {
+            font-size: 0.9em;
+
+        }
+        @media (max-width: 1024px) {
+            #article-title {
+                font-size: 0.7em;
+            }
+        }
     </style>
 
     <!-- 主体结构 -->
@@ -62,11 +71,11 @@
 
             <div class="article-content" style="margin-top: 90px; padding-bottom: 0em;">
                 <a th:href="@{${post.status.permalink}}">
-                    <h1 data-dia="article-link"
+                    <h1 id="article-title" data-dia="article-link"
                         th:text="${post.spec.title}"
                         style="line-height:1.2em; margin-bottom:0em; max-height:3em; overflow:hidden;
-                               text-overflow:ellipsis; display:-webkit-box; -webkit-line-clamp:2;
-                               -webkit-box-orient:vertical; font-size:0.9em;">
+                           text-overflow:ellipsis; display:-webkit-box; -webkit-line-clamp:2;
+                           -webkit-box-orient:vertical;">
                     </h1>
                 </a>
                 <p th:text="${post.status.excerpt}" class="article-content" style="display:none;"></p>
