--- a/templates/bangumis.html
+++ b/templates/bangumis.html
@@ -430,10 +430,10 @@
                                     <a class="bangumi-button bangumi-firstpage" href="javascript:;" target="_self"
                                        onclick="return false" data-pjax-state=""> 首页</a>
                                     <a class="bangumi-button bangumi-previouspage" href="javascript:;" target="_self"
-                                       onclick="return false" data-pjax-state="">上页</a>
+                                       onclick="return false" data-pjax-state="">上一页</a>
                                     <span class="bangumi-pagenum">1 / 1</span>
                                     <a class="bangumi-button bangumi-nextpage" href="javascript:;" target="_self"
-                                       onclick="return false" data-pjax-state="">下页</a>
+                                       onclick="return false" data-pjax-state="">下一页</a>
                                     <a class="bangumi-button bangumi-lastpage" href="javascript:;" target="_self"
                                        onclick="return false" data-pjax-state="">尾页</a>
                                 </div>
@@ -446,10 +446,10 @@
                                     <a class="bangumi-button bangumi-firstpage" href="javascript:;" target="_self"
                                        onclick="return false" data-pjax-state=""> 首页</a>
                                     <a class="bangumi-button bangumi-previouspage" href="javascript:;" target="_self"
-                                       onclick="return false" data-pjax-state="">上页</a>
+                                       onclick="return false" data-pjax-state="">上一页</a>
                                     <span class="bangumi-pagenum">1 / 1</span>
                                     <a class="bangumi-button bangumi-nextpage" href="javascript:;" target="_self"
-                                       onclick="return false" data-pjax-state="">下页</a>
+                                       onclick="return false" data-pjax-state="">下一页</a>
                                     <a class="bangumi-button bangumi-lastpage" href="javascript:;" target="_self"
                                        onclick="return false" data-pjax-state="">尾页</a>
                                 </div>
@@ -462,10 +462,10 @@
                                     <a class="bangumi-button bangumi-firstpage" href="javascript:;" target="_self"
                                        onclick="return false" data-pjax-state=""> 首页</a>
                                     <a class="bangumi-button bangumi-previouspage" href="javascript:;" target="_self"
-                                       onclick="return false" data-pjax-state="">上页</a>
+                                       onclick="return false" data-pjax-state="">上一页</a>
                                     <span class="bangumi-pagenum">1 / 1</span>
                                     <a class="bangumi-button bangumi-nextpage" href="javascript:;" target="_self"
-                                       onclick="return false" data-pjax-state="">下页</a>
+                                       onclick="return false" data-pjax-state="">下一页</a>
                                     <a class="bangumi-button bangumi-lastpage" href="javascript:;" target="_self"
                                        onclick="return false" data-pjax-state="">尾页</a>
                                 </div>
