--- a/templates/modules/widgets/page.html
+++ b/templates/modules/widgets/page.html
@@ -12,7 +12,7 @@
                 <svg class="svg-icon">
                     <use href="#icon-arrow-left" fill="currentColor" stroke="var(--background-primary)"></use>
                 </svg>
-                上页
+                上一页
             </li>
         </a>
 
@@ -40,7 +40,7 @@
         </th:block>
 
         <a th:if="${pageInfo.hasNext}" th:href="${pageInfo.nextUrl}">
-            <li class="text-ob-bright">下页
+            <li class="text-ob-bright">下一页
                 <svg class="svg-icon">
                     <use href="#icon-arrow-right" fill="currentColor" stroke="var(--background-primary)"></use>
                 </svg>
