--- a/templates/modules/widgets/aside/toc.html
+++ b/templates/modules/widgets/aside/toc.html
@@ -2,9 +2,40 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <!-- 目录 -->
 <div th:fragment="toc">
+    <script>
+        function returnTop() {
+            scrollToDest(0, 500)
+        }
+        function scrollToDest(e, t) {
+            if (e < 0 || t < 0)
+                return;
+            const n = window.scrollY || window.screenTop;
+            if (e -= 70,
+            "CSS" in window && CSS.supports("scroll-behavior", "smooth"))
+                return void window.scrollTo({
+                    top: e,
+                    behavior: "smooth"
+                });
+            let o = null;
+            t = t || 500,
+                window.requestAnimationFrame((function i(s) {
+                        if (o = o || s,
+                        n < e) {
+                            const r = s - o;
+                            window.scrollTo(0, (e - n) * r / t + n),
+                                r < t ? window.requestAnimationFrame(i) : window.scrollTo(0, e)
+                        } else {
+                            const r = s - o;
+                            window.scrollTo(0, n - (n - e) * r / t),
+                                r < t ? window.requestAnimationFrame(i) : window.scrollTo(0, e)
+                        }
+                    }
+                ))
+        }
+    </script>
     <div class="sidebar-box mb-4" style="">
         <p class="relative flex items-center pb-2 mb-4 text-xl text-ob-bright uppercase">
-            <svg class="svg-icon inline-block mr-2 inline-block mr-2"
+            <svg class="svg-icon inline-block mr-2"
                  style="height: 1em; width: 1em;">
                 <use href="#icon-toc" fill="currentColor"
                      stroke="var(--background-primary)"></use>
@@ -19,33 +50,27 @@
     </div>
     <ul id="sidebar-navigator"
         class="flex flex-row bg-ob-deep-800 rounded-xl shadow-2xl justify-items-center overflow-hidden mb-8">
-        <li onclick="window.history.back()"
-            class="border-r-4 border-ob-deep-900 flex justify-center py-3 w-full hover:opacity-50 hover:text-ob transition-all cursor-pointer">
-            <svg class="svg-icon inline-block text-3xl inline-block text-3xl"
-                 style="height: 1em; width: 1em;">
-                <use href="#icon-go-back"
-                     fill="currentColor"
-                     stroke="var(--background-primary)"></use>
-            </svg>
-        </li>
+
         <li onclick="returnTop()"
-            class="border-r-4 border-ob-deep-900 flex justify-center py-3 w-full hover:opacity-50 hover:text-ob transition-all cursor-pointer">
-            <svg class="svg-icon inline-block text-3xl inline-block text-3xl"
+            class="border-r-4 border-ob-deep-900 flex items-center justify-center py-3 w-full hover:opacity-50 hover:text-ob transition-all cursor-pointer">
+            <svg class="svg-icon inline-block text-3xl"
                  style="height: 1em; width: 1em;">
                 <use href="#icon-back-to-top"
                      fill="currentColor"
                      stroke="var(--background-primary)"></use>
             </svg>
+            <span class="ml-2">回到顶部</span>
         </li>
         <li onclick="window.location.href=window.location.href.split('#')[0]+'#comments'"
-            class="flex justify-center py-3 w-full hover:opacity-50 hover:text-ob transition-all cursor-pointer"
+            class="flex items-center justify-center py-3 w-full hover:opacity-50 hover:text-ob transition-all cursor-pointer"
             data-dia="jump-to-comment">
-            <svg class="svg-icon inline-block text-3xl inline-block text-3xl"
+            <svg class="svg-icon inline-block text-3xl"
                  style="height: 1em; width: 1em;">
                 <use href="#icon-quote"
                      fill="currentColor"
                      stroke="var(--background-primary)"></use>
             </svg>
+            <span class="ml-2">立刻评论</span>
         </li>
     </ul>
 </div>
