--- a/templates/macro/post-card.html
+++ b/templates/macro/post-card.html
@@ -69,7 +69,7 @@
                 </div>
             </a>
 
-            <div class="article-content" style="margin-top: 90px; padding-bottom: 0em;">
+            <div class="article-content" style="margin-top: 90px; padding-bottom: 0em;padding-left: 0.5rem;padding-right: 0rem;">
                 <a th:href="@{${post.status.permalink}}">
                     <h1 id="article-title" data-dia="article-link"
                         th:text="${post.spec.title}"
@@ -91,7 +91,7 @@
                             </th:block>
                         </span>
                     </div>
-                    <span class="text-ob-dim">
+                    <span class="text-ob-dim" style="font-size: 0.85em;">
                         [[${#dates.format(post.spec.publishTime, 'yyyy-MM-dd')}]]
                     </span>
                 </div>
