--- a/templates/post.html
+++ b/templates/post.html
@@ -189,6 +189,8 @@
                     } else {
                         alert("请先登录!");
                         console.error("点赞请求失败：", xhr.statusText);
+                        //跳转到登录页面
+                        window.location.href = "/login?redirect_uri=" + encodeURIComponent(window.location.href);
                     }
                 }
             };
@@ -249,6 +251,7 @@
                     } else {
                         alert("请先登录!");
                         console.error("收藏请求失败：", xhr.statusText);
+                        window.location.href = "/login?redirect_uri=" + encodeURIComponent(window.location.href);
                     }
                 }
             };
