--- a/templates/macro/post-card.html
+++ b/templates/macro/post-card.html
@@ -50,12 +50,17 @@
         </span>
 
         <div class="article">
+
             <a id="imgHref" th:href="@{${post.status.permalink}}">
+
                 <div class="article-thumbnail">
+
                     <!-- 如果没有专门海报图，就以 default_img 代替 -->
                     <img alt=""
                          lazy="loading"
-                         th:src="${#strings.isEmpty(post.spec.cover) ? default_img : post.spec.cover}">
+                         th:src="${#strings.isEmpty(post.spec.cover) ? default_img : post.spec.cover}"/>
+                    <i class="roozenfont roozen-fire" style="color: #ff6666; position: absolute; top: 10px; right: 10px; z-index: 20;"
+                       th:if="${post.stats?.upvote ?: 0} > 2 or ${post.stats.comment} > 2 or ${post.stats.visit} > 30"></i>
 
                     <!-- 关键：video preload="none" + display:none，避免先行加载和白屏 -->
                     <video class="artile-video"
