--- a/templates/modules/widgets/aside/popular-posts.html
+++ b/templates/modules/widgets/aside/popular-posts.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>热门文章</title>
+    <title>热门</title>
     <style>
         /* 按钮组容器，内联弹性布局，不换行 */
         .tab-group {
