--- a/templates/modules/common/navigator.html
+++ b/templates/modules/common/navigator.html
@@ -15,6 +15,10 @@
                 post_cols.classList.remove('grid-cols-1', 'grid-cols-2', 'grid-cols-3', 'grid-cols-4')
                 post_cols.classList.add('grid-cols-1');
             }
+        }else {
+            if (pc_aside !== null) {
+                pc_aside.style.display = 'block'
+            }
         }
     </script>
 </th:block>
