--- a/templates/macro/post-card.html
+++ b/templates/macro/post-card.html
@@ -59,9 +59,8 @@
                     <img alt=""
                          lazy="loading"
                          th:src="${#strings.isEmpty(post.spec.cover) ? default_img : post.spec.cover}"/>
-<!--                    <i class="roozenfont roozen-fire" style="color: #ff6666; position: absolute; top: 10px; right: 10px; z-index: 20;"-->
-<!--                       th:if="${(post.stats?.upvote ?: 0) > 2 or (post.stats?.comment ?: 0) > 2 or (post.stats?.visit ?: 0) > 30}"></i>-->
-
+                    <span style="display: inline-block; width: 50px; height: 22px; background-color: #4A90E2; color: #ffffff; position: absolute; top: 10px; left: 10px; z-index: 20; text-align: center; line-height: 25px; font-size: 0.8em; border-radius: 4px; font-family: Arial, sans-serif;"
+                          th:if="${post.metadata.annotations['online.video'] != null and !#strings.isEmpty(post.metadata.annotations['online.video'])}">在线看</span>
                     <!-- 关键：video preload="none" + display:none，避免先行加载和白屏 -->
                     <video class="artile-video"
                            preload="none"
