--- a/templates/modules/widgets/nav-right.html
+++ b/templates/modules/widgets/nav-right.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <!-- 导航栏菜单栏 -->
 <th:block th:fragment="nav-right">
     <div id="nav-right" class="header-controls absolute  right-0 flex flex-row"
@@ -15,14 +15,16 @@
 
             <div class="dropdown-content" id="dropdown-content" style="display: none; position: absolute; right: 0; width: 150px; background-color: #fff; border: 1px solid #ccc; box-shadow: 0 8px 16px rgba(0,0,0,0.2);">
                 <ul th:with="menu = ${#strings.isEmpty(theme.config.nav.menu) ? menuFinder.getPrimary() : menuFinder.getByName(theme.config.nav.menu)}">
+                    <li sec:authorize="isAnonymous()"><a href="/signup" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;">注册</a></li>
+                    <li sec:authorize="isAnonymous()"><a href="/login" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;">登录</a></li>
                     <li><a href="#" id="theme-toggle-link" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;">夜间模式</a></li>
-                    <li><a href="/uc" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;">个人中心</a></li>
+                    <li sec:authorize="isAuthenticated()"><a href="/uc" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;">个人中心</a></li>
                     <li><a href="/search?page=1&size=12&title=&type=hot" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;">热门影片</a></li>
-                    <li><a href="/favo?page=1&size=12" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;">我的收藏</a></li>
+                    <li sec:authorize="isAuthenticated()"><a href="/favo?page=1&size=12" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;">我的收藏</a></li>
                     <li th:each="menuItem : ${menu.menuItems}">
                         <a th:href="@{${menuItem.status.href}}" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;" th:text="${menuItem.status.displayName}"></a>
                     </li>
-                    <li><a href="/logout" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;">登出</a></li>
+                    <li sec:authorize="isAuthenticated()"><a href="/logout" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;">登出</a></li>
                 </ul>
             </div>
         </div>
