--- a/templates/modules/widgets/nav-menu.html
+++ b/templates/modules/widgets/nav-menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <th:block th:fragment="nav-menu">
     <script>
         function updateNavMenuVisibility() {
@@ -17,8 +17,8 @@
     <nav id="nav-menu" class="menus items-center hidden flex-1 lg:flex">
         <ul th:with="menu = ${#strings.isEmpty(theme.config.nav.menu) ? menuFinder.getPrimary() : menuFinder.getByName(theme.config.nav.menu)}"
             class="flex flex-row list-none px-6 text-white">
-            <li class="not-italic font-medium text-xs h-full relative flex flex-col items-center justify-center cursor-pointer text-center py-4 px-2">
-                <a href="/signup" class="nav-link text-sm block px-1.5 py-0.5 rounded-md relative uppercase">注册</a>
+            <li sec:authorize="isAnonymous()" class="not-italic font-medium text-xs h-full relative flex flex-col items-center justify-center cursor-pointer text-center py-4 px-2">
+                <a href="/signup" class="nav-link text-sm block px-1.5 py-0.5 rounded-md relative uppercase">注册页</a>
             </li>
             <li th:each="menuItem : ${menu.menuItems}" th:onclick="go([[${menuItem.status.href}]])"
                 class="not-italic font-medium text-xs h-full relative flex flex-col items-center justify-center cursor-pointer text-center py-4 px-2">
