显示视频时长

--- a/templates/macro/post-card.html
+++ b/templates/macro/post-card.html
@@ -96,7 +96,7 @@
                         </span>
                     </div>
                     <span class="text-ob-dim" style="font-size: 0.85em;">
-                        [[${#dates.format(post.spec.publishTime, 'yyyy-MM-dd')}]]
+                        [[${post.metadata.annotations['online.video.duration']}]]
                     </span>
                 </div>
             </div>
